--- a/Card.html
+++ b/Card.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <div class="card">
-        <img src="bugati.jpg" alt="Girl" />
+        <img src="assets/bugati.jpg" />
         <div class="card_details">
           <span class="tag">Fast</span>
           <span class="tag">Race</span>
